--- a/src/main/webapp/WEB-INF/views/add.html
+++ b/src/main/webapp/WEB-INF/views/add.html
@@ -70,17 +70,17 @@
 			</p>
 			<form method="POST" action="addSubmit">
 				<div class="form-group">
-					<label for="imie"><p>Imie</p></label> <input type="text"
+					<label for="imie">Imie</label> <input type="text"
 						class="form-control" id="imie" name="Name"
 						placeholder="Podaj swoje imie" />
 				</div>
 				<div class="form-group">
-					<label for="wiek"><p>Wiek</p></label> <input type="number"
+					<label for="wiek">Wiek</label> <input type="number"
 						class="form-control" id="wiek" name="age"
 						placeholder="Podaj swoj wiek" />
 				</div>
 				<div class="form-group">
-					<label for="dataUrodzenia"><p>Data urodzenia</p></label> <input
+					<label for="dataUrodzenia">Data urodzenia</label> <input
 						type="date" class="form-control" id="dataUrodzenia"
 						name="bornDate" placeholder="Podaj swoja date urodzenia" />
 				</div>
